@startuml "visitors"
skinparam linetype ortho

interface "ILayer"

   interface ILayerVisitor {
       + visit(s: Snow): void
       + visit(i: Ice): void
       + visit(l: Layer): void
   }


   interface IVehicleVisitor {
       + visit(c: Car): void
       + visit(b: Bus): void
       + visit(s: SnowPlow): void
   }


   class SnowMergeVisitor implements ILayerVisitor{
        + visit(s : Snow) : void
        + visit(i : Ice) : void
        + visit(l : Layer) : void
    }
    SnowMergeVisitor --> "1" Snow: base
    SnowMergeVisitor --> "1" ILayer: result

    class IceMergeVisitor implements ILayerVisitor{
        + visit(s : Snow) : void
        + visit(i : Ice) : void
        + visit(l : Layer) : void
    }
    IceMergeVisitor --> "1" Ice: base
    IceMergeVisitor --> "1" ILayer: result

    class IceSlipVisitor implements IVehicleVisitor{
        - result : bool
        + visit(c : Car) : void
        + visit(s : SnowPlow) : void
        + visit(b : Bus) : void
    }

    IceSlipVisitor --> "1" IRandom: random

    class SnowExitVisitor implements IVehicleVisitor{
        - result : bool
        + visit(c : Car) : void
        + visit(b : Bus) : void
        + visit(s : SnowPlow) : void
    }
    SnowExitVisitor --> "1" Snow: base

    class BrushClearLayerVisitor implements ILayerVisitor{
        - result : bool
        + visit(s : Snow) : void
        + visit(i : Ice) : void
        + visit(l : Layer) : void
    }

    class BroomClearLayerVisitor implements ILayerVisitor{
        - result : bool
        + visit(s : Snow) : void
        + visit(i : Ice) : void
        + visit(l : Layer) : void
    }

    class IceBreakerClearLayerVisitor implements ILayerVisitor{
        - result : bool
        + visit(s : Snow) : void
        + visit(i : Ice) : void
        + visit(l : Layer) : void
    }



@enduml